--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-native-reanimated": "~1.2.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.2.2",
+    "react-navigation-header-buttons": "^3.0.2",
     "react-navigation-material-bottom-tabs": "^2.1.2",
     "react-navigation-stack": "^1.9.4",
     "react-navigation-tabs": "^2.5.6"
