--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^2.1.0",
     "axios": "^0.19.0",
+    "date-fns": "^2.6.0",
     "expo": "^35.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
